# ume

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  build.sh
cmake/: dependencies.cmake
engine/: CMakeLists.txt
engine/include/ume/: application.hpp  game.hpp  window.hpp
engine/src/: application.cpp  entry.cpp  renderer.cpp  renderer.hpp  window.cpp
engine/src/platform/: window.cpp  window.hpp
sandbox/: Cmakelists.txt  main.lua  project.toml
sandbox/src/: main.cpp  test_app.cpp  test_game.cpp  test_game.hpp
src/: main.cpp
src/ume/: application.cpp  application.hpp
src/ume/core/: application.cpp  application.hpp  logger.cpp  logger.hpp
src/ume/platform/: window.cpp  window.hpp
src/ume/platform/vulkan/: vulkan_context.cpp  vulkan_context.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/ume/renderer/: renderer.cpp  renderer.hpp  renderer_backend.hpp
